# mail_sendler

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  index.html  pyproject.toml
app/: .env  .env.dev  Dockerfile  entrypoint.sh  manage.py
app/mail/: admin.py  admin_inline.py  apps.py  backends.py  models.py  signals.py  tasks.py  views.py
app/mail/migrations/: 0001_initial.py  0002_auto_20220323_0639.py  0003_followergroup_followers.py  0004_remove_follower_group.py  0005_auto_20220323_0901.py
app/mail/services/: saving_csv.py  sending_emails.py
app/mail/templates/admin/mail/followergroup/: change_form.html  tabular_paginated.html
app/mail/templatetags/: paginated_inline.py
app/src/: celery.py  settings.py  urls.py
app/src/settings/: __init__.py
app/src/settings/components/: base.py  celery_settings.py  email_config.py
app/src/settings/environments/: development.py  local.py  production.py
data/: csv_file.csv  data_generator.py  gen_pandas.py  reader.py
