[tool.poetry]
name = "mail_sendler"
version = "0.1.0"
description = ""
authors = ["vildan-valeev <vildan.maydanovich.valeev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
celery = "^5.2.3"
django-split-settings = "^1.1.0"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
redis = "^4.2.0"
django-stubs-ext = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
